Updated dut ot the review